# DMI-UN-Comp

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
data/: DMI_UN.sql  config.json  creds template.json  formatting.json  var-list.json
un_comp/functions/: save_output.py  source_import.py  source_parse.py
un_comp/functions/comparison/: address_count_comp.py  dob_comp.py  general.py  id_comp.py  lqaka_comp.py  name_comp.py  nationality_comp.py  pob_count_comp.py  residency_comp.py  uid_comp.py
un_comp/modules/EmailModule/: classes.py
un_comp/modules/ExcelModule/: classes.py
un_comp/modules/SQLModule/: classes.py
