[tool.poetry]
name = "hmtass-comp"
version = "1.0.0"
description = "Comparison Report Generator for UN profiles"
authors = ["Michael Surjawidjaja <michael.surjawidjaja@dowjones.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tqdm = "^4.51.0"
pywin32 = "^228"
requests = "^2.24.0"
xmltodict = "^0.12.0"
google-api-python-client = "^1.12.5"
pyodbc = "^4.0.30"
xlrd = "1.2.0"
pandas = "^1.1.4"
XlsxWriter = "1.3.6"
openpyxl = "^3.0.5"
pysuite = {git = "https://github.dowjones.net/djin-anr/pysuite"}

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
autopep8 = "^1.5.4"
auto-py-to-exe = "^2.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
